--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "synk-js": "git+ssh://git@github.com/CharlesHolbrow/synk-js.git"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "eslint": "^4.2.0"
