--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["ie >= 9", "safari >= 2", "firefox >= 10", "chrome >= 11", "opera >= 12"]
-      },
-      "useBuiltIns": true
-    }]
-  ]
+  "presets": ["es2015"]
 }
