--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "synk-host",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open"
   },
   "author": "CharlesHolbrow@gmail.com",
   "license": "ISC",
@@ -14,8 +16,13 @@
     "synk-js": "git+ssh://git@github.com/CharlesHolbrow/synk-js.git"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-webpack": "^6.4.3",
     "clean-webpack-plugin": "^0.1.16",
     "html-webpack-plugin": "^2.29.0",
-    "webpack": "^3.3.0"
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
