--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "export ENV=prod; webpack",
-    "build:dev": "export ENV=dev; webpack",
+    "build:dev": "export ENV=dev; webpack --display-error-details",
     "watch": "export ENV=dev; webpack --watch",
     "start": "export ENV=dev; webpack-dev-server --open"
   },
@@ -23,7 +23,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-webpack": "^6.4.3",
     "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "style-ext-html-webpack-plugin": "^3.4.1",
+    "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   }
